feat: enable EPUB output format

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -52,3 +52,6 @@ format:
     documentclass: scrbook
     keep-tex: true
     citation-style: chicago-author-date.csl
+  epub:
+    toc: true
+    number-sections: true
