--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 book:
   title: "The Celestial Curia"
   subtitle: "The Master Book of Traditional Astrology"
-  author: "Celestial Curia Research Group"
+  author: "Andrew Darcy"
   date: last-modified
   search: true
   chapters:
